--- a/pages sloth/styles/navigation.css
+++ b/pages sloth/styles/navigation.css
@@ -20,6 +20,7 @@ html {
   justify-content: space-between;
   padding: 0 7.5%;
   line-height: 60px;
+  filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
 .brand {
