update ui edit_profile admin_login profile_view confirm_popup

--- a/pages sloth/styles/login.css
+++ b/pages sloth/styles/login.css
@@ -32,10 +32,16 @@ body {
   margin: 20px 0;
 }
 
+.container .title {
+  font-size: 32px;
+  font-weight: bold;
+}
+
 .container .logo {
   height: 180px;
   width: 180px;
   border-radius: 50%;
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .container .login-form {
