--- a/pages sloth/styles/lab.css
+++ b/pages sloth/styles/lab.css
@@ -1,5 +1,8 @@
 body {
-    background-color:#EFEFEF;
+    background-image: url("../assets/brand1.JPG");
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(5px);
 }
 
 .container {
@@ -9,6 +12,7 @@ body {
     grid-gap: 10%;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .lab {
@@ -47,6 +51,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 50px 50px 0 0;
+    object-fit: cover;
 }
 
 button {
@@ -67,3 +72,6 @@ button:hover {
 button:active {
     background: #63b676;
 }
+button:focus {
+    outline: none;
+  }
