--- a/pages sloth/styles/register.css
+++ b/pages sloth/styles/register.css
@@ -36,6 +36,7 @@ body {
   height: 180px;
   width: 180px;
   border-radius: 50%;
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .container .register-form {
