--- a/pages sloth/styles/lab.css
+++ b/pages sloth/styles/lab.css
@@ -16,9 +16,6 @@ body {
 }
 
 .lab {
-    /*border-style: solid;
-    border-width: 1px;
-    border-color: black;*/
     border-radius: 50px;
     text-align: center;
     display: grid;
@@ -26,6 +23,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 12em;
     height: 16em;
+    background-color: white;
 } 
 
 .lab > div:last-child {
@@ -34,7 +32,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: #EFEFEF;
     border-radius: 0 0 50px 50px;
 }
 
@@ -63,6 +61,7 @@ button {
     box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
     width: fit-content;
     margin-top: 6%;
+    font-size: large;
 }
 
 button:hover {
