--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,5 +1,5 @@
 .body {
-  background: #efefef;
+  background-color: var(--whitegray);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -11,10 +11,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #ffffff;
+  background-color: #ffffff;
   width: 80%;
   border-radius: 5rem;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px var(--shadow);
 }
 
 .container * {
@@ -29,7 +29,7 @@
   height: 180px;
   width: 180px;
   border-radius: 50%;
-  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 2px 2px var(--shadow);
 }
 
 .login-form {
@@ -54,7 +54,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #0275d880;
+  background-color: var(--blue80);
 }
 
 .icon-input > i {
@@ -74,12 +74,12 @@
 .container input[type="submit"] {
   height: 50px;
   width: 250px;
-  background: #0275d8;
+  background-color: var(--blue);
   border-radius: 15px;
   color: white;
   font-size: 24px;
   border: none;
-  box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
+  box-shadow: 0 4px 4px 0 var(--blueshadow);
 }
 
 .container input[type="submit"]:hover {
@@ -87,7 +87,7 @@
 }
 
 .container input[type="submit"]:active {
-  background: #002f50;
+  background-color: var(--darkblue);
 }
 
 input:focus {
@@ -95,11 +95,11 @@ input:focus {
 }
 
 .container a {
-  color: #0275d8;
+  color: var(--blue);
 }
 
 .message_error {
-  color: #dd3631;
+  color: var(--red);
   font-size: 14px;
   text-align: center;
   margin: 0;
