--- a/Views/User/Profile.cshtml
+++ b/Views/User/Profile.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container">
   <div class="image">
-    <img src='@Url.Content(Model.ImageURL != "" ? Model.ImageURL : "~/assets/images/brand.jpg")' alt="user_image" />
+    <img src='@Url.Content(Model.ImageUrl != "" ? Model.ImageUrl : "~/assets/images/brand.jpg")' alt="user_image" />
   </div>
   <div class="information">
     <div>Name</div>
