--- a/wwwroot/css/edit_profile.css
+++ b/wwwroot/css/edit_profile.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  padding: 30px;
+  background-color: var(--white80);
 }
 
 .container > * {
