--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: var(--whitegray);
+  background-color: var(--white80);
   height: 100vh;
   display: flex;
   align-items: center;
