--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -1,6 +1,6 @@
 .body {
   height: 100vh;
-  background-color: var(--whitegray);
+  background-color: var(--white80);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,7 +66,7 @@ a:active.start {
 
 .btn-member {
   color: var(--blackgray);
-  background-color: #ffffff20;
+  background-color: var(--white80);
   position: absolute;
   font-size: 28px;
   text-align: center;
