--- a/wwwroot/css/lab.css
+++ b/wwwroot/css/lab.css
@@ -5,7 +5,7 @@
     grid-gap: 10%;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: var(--white80);
 }
 
 .lab {
@@ -13,7 +13,7 @@
     text-align: center;
     display: grid;
     grid-template-rows: 50% 50%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 var(--shadow), 0 6px 20px 0 var(--shadow);
     width: 12em;
     height: 16em;
     background-color: white;
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #EFEFEF;
+    background-color: var(--whitegray);
     border-radius: 0 0 50px 50px;
 }
 
@@ -45,25 +45,25 @@
     object-fit: cover;
 }
 
-button {
-    background-color: #28A745;
+.lab a {
+    background-color: var(--green);
+    text-decoration: none;
+    text-align: center;
     color: white;
+    display: block;
     padding: 3.5% 12%;
     border-radius: 10px;
-    border: none;
-    box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
+    box-shadow: 0 4px 4px 0 var(--greenshadow);
     width: fit-content;
+    line-height: calc(7% + 18px); /*padding-top + padding-bottom + font-size*/
     margin-top: 6%;
     font-size: large;
 }
 
-button:hover {
+.lab a:hover {
     cursor: pointer;
 }
 
-button:active {
-    background: #63b676;
+.lab a:active {
+    background-color: var(--darkgreen);
 }
-button:focus {
-    outline: none;
-  }
