delete try catch,background css,font color edit_profile

--- a/Views/User/EditProfile.cshtml
+++ b/Views/User/EditProfile.cshtml
@@ -50,6 +50,7 @@
         placeholder="Email"
         id="Email"
         name="Email"
+        class="readonly"
         readonly
       />
     </div>
@@ -66,7 +67,7 @@
     </div>
     <label asp-for="Id"></label>
     <div>
-      <input asp-for="Id" type="text" id="Id" name="Id" readonly />
+      <input asp-for="Id" type="text" id="Id" name="Id" class="readonly" readonly />
     </div>
   </div>
   <button
