--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="filter"></div>
     @{
         string controller = ViewContext.RouteData.Values["Controller"].ToString().ToLower();
         string action = ViewContext.RouteData.Values["Action"].ToString().ToLower();
