--- a/wwwroot/css/edit_profile.css
+++ b/wwwroot/css/edit_profile.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background-color: var(--white80);
 }
 
 .container > * {
@@ -92,6 +91,10 @@
   color: var(--red);
   font-size: 14px;
   margin: 5px 0 0;
+}
+
+.container .readonly {
+  color: #808080;
 }
 
 .container button {
