--- a/wwwroot/css/profile.css
+++ b/wwwroot/css/profile.css
@@ -4,8 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background-color: var(--white80);
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .container * {
