--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,6 +25,13 @@ html {
   font-size: 18px;
 }
 
+body {
+  background-image: url("../assets/images/background.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 header {
   position: sticky;
   top: 0;
@@ -33,10 +40,8 @@ header {
 main {
   width: 100%;
   height: 100%;
-  background-image: url("../assets/images/background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
+
 
 :root {
   --blue: #0275d8;
@@ -51,4 +56,12 @@ main {
   --darkgreen: #10471d;
   --greenshadow: rgba(40, 167, 69,0.2);
   --white80: rgba(255,255,255,0.5);
+}
+
+.filter {
+  background-color: var(--white80);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: -1;
 }
