--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SlothFlyingWeb</title>
-    <link rel="stylesheet" href="~/assets/fonts/fontawesome/css/all.css">
+    <environment names="Development">
+        <link rel="stylesheet" href="~/assets/fonts/fontawesome/css/all.css">
+    </environment>
+    <environment names="Production">
+        <link rel="stylesheet" href="~/assets/fonts/fontawesome/css/all.min.css">
+    </environment>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/navigation.css" />
     @RenderSection("Styles", required: false)
@@ -16,10 +21,10 @@
 <body>
     <div class="filter"></div>
     @{
-        string controller = ViewContext.RouteData.Values["Controller"].ToString().ToLower();
-        string action = ViewContext.RouteData.Values["Action"].ToString().ToLower();
+        string controller = ViewContext.RouteData.Values["Controller"].ToString();
+        string action = ViewContext.RouteData.Values["Action"].ToString();
     }
-    @if (("user" == controller || "lab" == controller) && SessionExtensions.GetInt32(Context.Session, "Id") != null)
+    @if (("User" == controller || "Lab" == controller) && SessionExtensions.GetInt32(Context.Session, "Id") != null)
     {
         <header>
             <nav class="navbar">
@@ -28,11 +33,12 @@
                     <div class="brand-text">Sloth Flying Lab</div>
                 </div>
                 <div class="menu">
-                    <a id="lab" asp-controller="Lab" asp-action="Index" class='@("lab" == controller ? "active" : "")'>Lab</a>
+                    <a id="lab" asp-controller="Lab" asp-action="Index"
+                        class='@("Lab" == controller ? "active" : "")'>Lab</a>
                     <a id="booklist" asp-controller="User" asp-action="Booklist"
-                        class='@("booklist" == action ? "active" : "")'>Booklist</a>
-                    <a id="profile" asp-controller="User" asp-action="Profile" class='@("profile" == action ||
-                        "editprofile" == action ? "active" : "")'>Profile</a>
+                        class='@("Booklist" == action ? "active" : "")'>Booklist</a>
+                    <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
+                        "EditProfile" == action ? "active" : "")'>Profile</a>
                     <a id="logout" asp-controller="User" asp-action="Logout" class="logout">Logout</a>
                 </div>
             </nav>
