booking and booklist incomplete

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,61 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Home Page";
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/home.css" />
+<link rel="stylesheet" href="~/css/home.css" />
 }
 
 <div class="body">
   <div class="container">
     <img src="~/assets/images/brand.jpg" alt="logo" class="logo" />
     <div class="container-label">
-      <div class="label">Welcome To<br/>Sloth Flying Laboratory</div>
+      <div class="label">Welcome To<br />Sloth Flying Laboratory</div>
       <a asp-controller="User" asp-action="Login" id="login" class="start">Let’s Start</a>
     </div>
   </div>
   <button class="btn-member" id="myBtn" onclick="visibleModal();">
-      <i class="fas fa-user-friends"></i>
-      <span>Members</span>
-    </button>
-</div>
-<div id="myModal" class="modal off">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <i class="fas fa-times close" onclick="invisibleModal();" id="close"></i>
-    <h2>Member</h2>
-      <table class="member-table">
-        <tbody>
-            <tr>
-          <td>61010416</td>
-          <td>ธนกฤต</td>
-          <td>เจริญบูลย์วิวัฒน์</td>
-        </tr>
-        <tr>
-          <td>61010888</td>
-          <td>รวิสรา</td>
-          <td>หนูเพ็ง</td>
-        </tr>
-        <tr>
-          <td>61010940</td>
-          <td>วราวุธ</td>
-          <td>พรบัณฑิตวงศ์</td>
-        </tr>
-        <tr>
-          <td>61010960</td>
-          <td>วัชรินทร์</td>
-          <td>กัณหา</td>
-        </tr>
-        <tr>
-          <td>61011144</td>
-          <td>สุภามาศ</td>
-          <td>สมสายผล</td>
-        </tr>
-        </tbody>
-      </table>
-  </div>
+    <i class="fas fa-user-friends"></i>
+    <span>Members</span>
+  </button>
 </div>
 
+<partial name="~/Views/Home/_MemberModal.cshtml" />
+
 @section Scripts {
-    <script src="~/js/home.js"></script>
+<script src="~/js/home.js"></script>
 }
