--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,31 +22,18 @@
     <div class="filter"></div>
     @{
         string controller = ViewContext.RouteData.Values["Controller"].ToString();
-        string action = ViewContext.RouteData.Values["Action"].ToString();
-    }
-    @if (("User" == controller || "Lab" == controller) && SessionExtensions.GetInt32(Context.Session, "Id") != null)
-    {
-        <header>
-            <nav class="navbar">
-                <div class="brand">
-                    <img src="~/assets/images/brand.jpg" alt="logo" class="brand-img" />
-                    <div class="brand-text">Sloth Flying Lab</div>
-                </div>
-                <div class="menu">
-                    <a id="lab" asp-controller="Lab" asp-action="Index"
-                        class='@("Lab" == controller ? "active" : "")'>Lab</a>
-                    <a id="booklist" asp-controller="User" asp-action="Booklist"
-                        class='@("Booklist" == action ? "active" : "")'>Booklist</a>
-                    <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
-                        "EditProfile" == action ? "active" : "")'>Profile</a>
-                    <a id="logout" asp-controller="User" asp-action="Logout" class="logout">Logout</a>
-                </div>
-            </nav>
-        </header>
+        // user navigation bar
+        if (("User" == controller || "Lab" == controller) && SessionExtensions.GetInt32(Context.Session, "Id") != null)
+        {
+            <header>
+                <partial name="~/Views/Shared/_NavigationUser.cshtml" />
+            </header>
+        }
     }
     <main role="main">
         @RenderBody()
     </main>
+    <script src="~/js/site.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 
