--- a/wwwroot/css/booking.css
+++ b/wwwroot/css/booking.css
@@ -7,7 +7,7 @@
 table,
 th,
 td {
-  border: 1px solid white;
+  border: 1px solid #ffffff;
   border-collapse: collapse;
   text-align: center;
 }
@@ -36,6 +36,14 @@ td {
 
 .not-enable {
   background-color: var(--whitegray);
+}
+
+.late {
+  background-color: var(--gray);
+}
+
+.booked {
+  background-color: #d8ce41; 
 }
 
 .full,
@@ -77,7 +85,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 30px;
+  row-gap: 50px;
+  margin-bottom: 30px;
 }
 
 .book-inline {
@@ -85,10 +94,15 @@ button {
   flex-direction: row;
   column-gap: 20px;
   align-items: center;
+  position: relative;
 }
 
-.invisible {
-  visibility: hidden;
+.add {
+  color: var(--green);
+}
+
+.remove {
+  color: var(--red);
 }
 
 button:hover,
@@ -107,4 +121,17 @@ button:focus,
 input:focus,
 select:focus {
   outline: none;
+}
+
+.message-error {
+  color: var(--red);
+  background-color: #f7d7da;
+  border: 1px solid var(--red);
+  border-radius:  5px;
+  padding: 1% 2%;
+  font-size: 14px;
+  margin: 5px 0;
+  position: absolute;
+  top: 110%;
+  left: 0;
 }
