--- a/Views/Lab/Booking.cshtml
+++ b/Views/Lab/Booking.cshtml
@@ -56,7 +56,7 @@
             </tr>
         }
     </table>
-    <form method="POST" class="book" id="book">
+    <div class="book" id="book">
         <div class="book-inline" id="book-inline">
             <div>
                 <label for="date">Date</label>
@@ -87,11 +87,29 @@
                 <i class="fas fa-plus add" onclick="duplicateBookInline();"></i>
             </div>
         </div>
-    </form>
+    </div>
     <input type="text" id="startDateString" name="startDateString" value="@(new DateTimeOffset(startDate).ToUnixTimeMilliseconds())" hidden />
     <input type="number" id="LabId" name="LabId" value="@Model.Id" hidden />
     <button onclick="validation();">Book</button>
 </div>
+
+@section Modals {
+    <div id="book-list-range">
+        <h2>Lab @Model.Id @Model.ItemName Detail</h2>
+        <div>
+            <table>
+                <thead id="header-list">
+                    <tr>
+                        <th>Date</th>
+                        <th>From</th>
+                        <th>To</th>
+                    </tr>
+                </thead>
+                <tbody id="body-list"></tbody>
+            </table>
+        </div>
+    </div>
+}
 
 @section Scripts {
 <script src="~/js/booking.js"></script>
