--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SlothFlyingWeb
+@using SlothFlyingWeb.Utils
 @using SlothFlyingWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
