--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -11,7 +11,9 @@
   justify-content: center;
   align-items: center;
   background-color: #ffffff;
-  width: 80%;
+  width: 70%;
+  min-height: 600px;
+  height: 80%;
   border-radius: 5rem;
   box-shadow: 0px 4px 4px var(--shadow);
 }
