--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -13,7 +13,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  width: 70%;
+  min-height: 600px;
+  height: 80%;
 }
 
 .container > * {
