--- a/Views/Search/UserBooklist.cshtml
+++ b/Views/Search/UserBooklist.cshtml
@@ -9,10 +9,10 @@
 }
 
 <div class="head">
-    <a class="click" id="profile_nav" asp-controller="Search" asp-action="UserProfile"><i
+    <a class="click" id="profile_nav" asp-controller="Search" asp-action="UserProfile" asp-route-Id="@ViewBag.UserId"><i
             class="fas fa-id-card"></i><span>Profile</span></a>
-    <a class="active" id="booklist_nav" asp-controller="Search" asp-action="UserBooklist"><i
-            class="fas fa-list-alt"></i><span>Booklist</span></a>
+    <a class="active" id="booklist_nav" asp-controller="Search" asp-action="UserBooklist"
+        asp-route-Id="@ViewBag.UserId"><i class="fas fa-list-alt"></i><span>Booklist</span></a>
 </div>
 <div class="container">
     @if (Model.Count() == 0)
