--- a/wwwroot/css/search.css
+++ b/wwwroot/css/search.css
@@ -1,88 +1,95 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0;
 }
 
 .search {
-    display: flex;
-    flex-direction: row;
-    margin: 50px 0;
+  display: flex;
+  flex-direction: row;
+  margin: 50px 0;
 }
 
-.search input[type=text] {
-    padding: 10px;
-    font-size: 20px;
-    border: none;
-    width: 400px;
-    outline: none;
+.search input[type="text"] {
+  padding: 10px;
+  font-size: 20px;
+  border: none;
+  width: 400px;
+  outline: none;
 }
 
 .search button {
-    margin: 0px;
-    padding: 10px 15px;
-    background: #333333;
-    font-size: 20px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    color: #ffffff;
+  margin: 0px;
+  padding: 10px 15px;
+  background: var(--blackgray);
+  font-size: 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #ffffff;
 }
-  
+
 .search button:hover {
-    background: #28A745;
-    color: white;
+  background: var(--green);
+  color: white;
 }
 
 .search-img {
-    width: 30%;
-    border-radius: 50%;
+  width: 30%;
+  border-radius: 50%;
 }
 
 .user-container {
-    display: grid;
-    grid-template-columns: 0.5fr 1fr 1fr 1fr;
-    grid-gap: 2vh;
-    padding: 15px 30px;
-    align-items: center;
-    /*border-bottom: 1px solid #333333;*/
-    border-radius: 10px;
-    margin-bottom: 10px;
-    background-color: #ffffff;
-    filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 1fr 1fr;
+  grid-gap: 2vh;
+  padding: 15px 30px;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  background-color: #ffffff;
+  filter: drop-shadow(0 0.2rem 0.25rem var(--shadow));
 }
 
 .user-img {
-    width: 60px;
-    border-radius: 50%;
+  width: 60px;
+  border-radius: 50%;
 }
 
 .user-container:hover {
-    cursor: pointer;
-    color: #28A745;
+  cursor: pointer;
+  color: var(--green);
 }
 
 .user-container:active {
-    color: #000000;
+  color: #000000;
 }
 
-#loader {
-    border: 10px solid #ffffff;
-    border-top: 10px solid #28A745;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 1s linear infinite;
+.loader-disable {
+    display: none;
 }
-  
+
+.loader {
+  border: 10px solid #ffffff;
+  border-top: 10px solid var(--green);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
