--- a/wwwroot/css/user_booklist.css
+++ b/wwwroot/css/user_booklist.css
@@ -40,7 +40,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 7.5% 60px 7.5%;
     background-color: #ffffff;
