--- a/Views/Search/Index.cshtml
+++ b/Views/Search/Index.cshtml
@@ -12,12 +12,10 @@
     <div class="search-container">
         <img src="~/assets/images/brand.jpg" alt="logo" class="search-img" />
         <div class="search">
-            <input type="text" placeholder="Search Users" name="search" id="input" onkeyup="enterTrigger(event);"
-                required>
-            <button type="button" onclick="SearchResult();" id="search-button"><i class="fa fa-search"></i></button>
+            <input type="text" placeholder="&#xF002; Search Users" name="search" id="input" onkeyup="SearchResult()"
+                class="empty" required>
         </div>
         <div id="search-result"></div>
-        <div id="loader" class="loader-disable"></div>
     </div>
 </div>
 
