--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,6 +14,11 @@
   src: url("../assets/fonts/Roboto/Roboto-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: FontAwesome;
+  src: url("../assets/fonts/fontawesome/webfonts/fa-solid-900.ttf") format("truetype");
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
